--- a/frontend-suchus/index.html
+++ b/frontend-suchus/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/media/favicon.png" />
+    <link rel="shortcut icon" href="/media/favicon.png" />
+    <link rel="apple-touch-icon" href="/media/favicon.png" />
+    <meta name="theme-color" content="#4f46e5" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Suchus</title>
   </head>
