--- a/frontend-suchus/index.html
+++ b/frontend-suchus/index.html
@@ -11,6 +11,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Load xlsx from CDN for environments where it's not installed as a package -->
+    <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
